# distributed-transcoder

./: Dockerfile  LICENSE  README.md  docker-compose.yml  send_test_message.py  worker.py
api/: Dockerfile  pyproject.toml
api/distributed_transcoder_api/: api.py  managers.py  models.py  schemas.py  seed.py  work_queue.py
common/: pyproject.toml
common/distributed_transcoder_common/: __init__.py  message_types.py  models.py
deploy/: api-deployment.yaml  minio-deployment.yaml  postgres-deployment.yaml  rabbitmq-deployment.yaml  worker-deployment.yaml
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/components/: CircularProgress.tsx  DownloadVideo.tsx  JobList.tsx  JobProgress.tsx  Layout.tsx  Messages.tsx  Models.tsx  Navbar.tsx  NewJob.tsx  StatusProgress.tsx  SubmitJob.tsx  VideoUpload.tsx
frontend/components/JobList/: JobList.tsx  StatusProgress.tsx
frontend/components/JobSubmission/: Download.tsx  NewJob.tsx  Progress.tsx  Submit.tsx  Upload.tsx
frontend/components/Pagination/: Pagination.tsx
frontend/components/PlaylistSubmission/: NewPlaylist.tsx  Submit.tsx  Upload.tsx
frontend/components/PresetList/: NewPreset.tsx  PipelineModal.tsx  PresetList.tsx
frontend/pages/: _app.tsx  index.tsx  new_job.tsx  presets.tsx
worker/: Dockerfile  errors.py  pyproject.toml  work_queue.py  worker.py
