[tool.poetry]
name = "distributed-transcoder-worker"
version = "0.1.0"
description = "A worker for a distributed transcoding system that uses RabbitMQ, S3, and GStreamer"
authors = ["Eric Volpert <ericvolp12@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
PyGObject = "^3.44.1"
pika = "^1.3.1"
boto3 = "^1.26.104"
distributed-transcoder-common = "^0.2.8"
tortoise-orm = "^0.19.3"
asyncpg = "^0.27.0"
pydantic = "^1.10.7"

[tool.poetry.dev-dependencies]
black  = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
